--- a/templates/expenses/dashboard.html
+++ b/templates/expenses/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Expense List</h1>
+<h1>Dashboard</h1>
 
 <ul class="list-group">
     <li class="list-group-item">Bought Mango</li>
