--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,3 +13,11 @@
       font-size: 3.5rem;
     }
   }
+
+.showPasswordToggle{
+  cursor: pointer;
+  transition: all;
+}
+.showPasswordToggle:hover{
+  transform: scale(1,1.5);
+}
