--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -16,12 +16,12 @@
                     {% csrf_token %}
                     {% include 'partials/_messages.html' %}
                     <div class="form-group">
-                        <input type="text" name="username" placeholder="Username" id="usernameField" class="form-control form-control-sm"/>
+                        <input type="text" name="username" placeholder="Username" id="usernameField" value="{{fieldValues.username}}" class="form-control form-control-sm"/>
                     </div>
                     <div class="invalid_feedback invalid-feedback" style="display: none"></div>
                     <p class="text-sm text-success usernameSuccessOutput"></p>
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Email" id="emailField" class="form-control  form-control-sm"/>
+                        <input type="email" name="email" placeholder="Email" id="emailField" value="{{fieldValues.email}}" class="form-control  form-control-sm"/>
                     </div>
                     <div class="emailFeedBackArea invalid-feedback" style="display: none"></div>
                     <p class="text-sm text-success emailSuccessOutput"></p>
@@ -29,7 +29,7 @@
                         <input type="password" name="password" placeholder="Password" id="passwordField" class="form-control  form-control-sm"/>
                         <small class="float-right py-2 showPasswordToggle">Show</small>
                     </div>
-                    <input type="submit" value="Register" class="btn btn-block btn-primary"/>
+                    <input type="submit" value="Register" class="btn btn-block btn-primary submitBtn"/>
                 </form>
             </div>
         </div>
