--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,18 @@
   {% include 'header.html' %}
 <body>
   {% include 'nav.html' %}
-      <main role="main">
-        {% block content %}
-
-        {% endblock %}
+  <div class="container-fluid">
+    <div class="row">
+      {% if request.user.is_authenticated %}
+      {% include 'partials/_sidebar.html' %}
+      {% endif %}
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+        {% block content %} {% endblock %}
       </main>
-
     </div>
   </div>
-    {% include 'scripts.html' %}
     
 </body>
 
 </html>
+
