--- a/templates/expenses/dashboard.html
+++ b/templates/expenses/dashboard.html
@@ -1,16 +1,51 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Dashboard</h1>
+<div class="container mt-4">
+    <h1>Dashboard</h1>
+    <div class="row">
+        
+        <div class="col-md-10">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="{% url 'expenses' %}">Expenses</a></li>
+                <li class="breadcrumb-item active" aria-current="page">My Expenses</li>
+                </ol>
+            </nav>
+        </div>
 
-<ul class="list-group">
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
-    <li class="list-group-item">Bought Mango</li>
+        <div class="col-md-2">
+            <a href="{% url 'add-expense' %}" class="btn btn-primary">Add Expenses</a>
+        </div>
+    </div>
+    {% include 'partials/_messages.html' %}
+    <div class="container">
+        {% if expenses.count %}
+        <table class="table table-stripped table-hover">
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Description</th>
+                    <th>Amount(CURRENCY)</th>
+                    <th>Date</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for expense in expenses %}
+                <tr>
+                    <td>{{expense.category}}</td>
+                    <td>{{expense.description}}</td>
+                    <td>{{expense.amount}}</td>
+                    <td>{{expense.date}}</td>
+                    <td><a href="{% url 'update-expense' expense.id %}" class="btn btn-secondary btn-sm">Update</a></td>
+                    <td><a href="{% url 'delete-expense' expense.id %}" class="btn btn-danger btn-sm">Delete</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
+    </div>
+</div>
 
-</ul>
 {% endblock %}
