--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,7 +10,7 @@
     <ul class="navbar-nav px-3">
         {% if request.user.is_authenticated %}
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sign out</a>
+        <a class="nav-link" href="{% url 'logout' %}">Sign out</a>
       </li>
       {% else %}
       <li class="nav-item text-nowrap">
