--- a/templates/expenses/dashboard.html
+++ b/templates/expenses/dashboard.html
@@ -32,7 +32,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for expense in expenses %}
+                {% for expense in page_obj %}
                 <tr>
                     <td>{{expense.category}}</td>
                     <td>{{expense.description}}</td>
@@ -44,6 +44,23 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        <div>
+            Showing page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+        </div>
+        <div class="pagination align-right float-right mr-auto">
+            {% if page_obj.has_previous %}
+                <li {% if page_obj.number %} class="page-item active" {% endif %}> <a class="page-link" href="?page=1">&laquo; 1</a></li>
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number}}">Previous</a></li>
+            {% endif %}
+
+            {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">Next</a></li>
+                <li class="page-item active" ><a class="page-link" href="?page={{page_obj.paginator.num_pages}}">{{page_obj.paginator.num_pages}} &raquo;</a></li>
+            {% endif %}
+        </div>
+
+
         {% endif %}
     </div>
 </div>
