--- a/templates/expenses/dashboard.html
+++ b/templates/expenses/dashboard.html
@@ -38,7 +38,7 @@
                     <tr>
                         <th>Category</th>
                         <th>Description</th>
-                        <th>Amount(Currency)</th>
+                        <th>Amount({{currency}})</th>
                         <th>Date</th>
                         <th></th>
                         <th></th>
