--- a/templates/expenses/update_expense.html
+++ b/templates/expenses/update_expense.html
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label for="">Date of Expense</label>
-                <input type="date" class="form-control form-control-sm" value="{{expense.date}}" name="date">
+                <input type="date" class="form-control form-control-sm" value="{{expense.date |date:'Y-m-d'}}" name="date">
             </div>
             <input type="submit" value="Update" class="btn btn-secondary btn-block btn-lg"/>
         </form>
