--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -24,6 +24,10 @@
                     </div>
                     <input type="submit" value="Login" class="btn btn-block btn-primary submitBtn"/>
                 </form>
+                <div class="container">
+                    <span class="text-lead lead">Don't have an account? </span><a href="{% url 'register' %}">Register</a><br>
+                    <span class="text-lead lead">Forget Password? </span><a href="{% url 'password-reset' %}">Reset it</a>
+                </div>
             </div>
         </div>
     </div>
