--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -31,6 +31,9 @@
                     </div>
                     <input type="submit" value="Register" class="btn btn-block btn-primary submitBtn"/>
                 </form>
+                <div class="container">
+                    <span class="text-lead lead">Have an account? </span><a href="{% url 'login' %}">Login</a>
+                </div>
             </div>
         </div>
     </div>
