--- a/templates/authentication/set-new-password.html
+++ b/templates/authentication/set-new-password.html
@@ -8,22 +8,26 @@
             
             <div class="card-body">
                 <div class="card-title py-2">
-                    <h4>Please enter your email to get reset link</h4>
+                    <h4>Register for a free account</h4>
                 </div>
 
 
-                <form action="{% url 'password-reset' %}" method="POST">
+                <form action="{% url 'set-new-password' uidb64 token %}" method="POST">
                     {% csrf_token %}
                     {% include 'partials/_messages.html' %}
-                    
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Email" id="emailField" value="{{values.email}}" class="form-control  form-control-sm"/>
+                        <input type="password" name="password" placeholder="Password" id="passwordField" class="form-control  form-control-sm"/>
+                        <small class="float-right py-2 showPasswordToggle">Show</small>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password2" placeholder="Confirm Password" id="passwordField" class="form-control  form-control-sm"/>
+                        <small class="float-right py-2 showPasswordToggle">Show</small>
                     </div>
 
                     <input type="submit" value="Submit" class="btn btn-block btn-primary submitBtn"/>
                 </form>
                 <div class="container">
-                    <span class="text-lead lead">Don't have an account? </span><a href="{% url 'register' %}">Register</a><br>
+                    <span class="text-lead lead">No account? </span><a href="{% url 'register' %}">Register here</a>
                 </div>
             </div>
         </div>
