--- a/templates/incomes/dashboard.html
+++ b/templates/incomes/dashboard.html
@@ -8,20 +8,20 @@
         <div class="col-md-10">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{% url 'expenses' %}">Expenses</a></li>
-                <li class="breadcrumb-item active" aria-current="page">My Expenses</li>
+                <li class="breadcrumb-item"><a href="{% url 'incomes' %}">Income</a></li>
+                <li class="breadcrumb-item active" aria-current="page">My Income</li>
                 </ol>
             </nav>
         </div>
 
         <div class="col-md-2">
-            <a href="{% url 'add-expense' %}" class="btn btn-primary">Add Expense</a>
+            <a href="{% url 'add-income' %}" class="btn btn-primary">Add Income</a>
         </div>
     </div>
     {% include 'partials/_messages.html' %}
     <div class="container">
-        {% if expenses.count %}
-        <!-- search bar start-->
+        {% if incomes.count %}
+        
         <div class="row">
             <div class="col-md-8"></div>
             <div class="col-md-4">
@@ -30,13 +30,13 @@
                 </div>
             </div>
         </div>
-        <!-- search bar end-->
-        <!--Main Table start -->
+
+
         <div class="main-table">
             <table class="table table-stripped table-hover">
                 <thead>
                     <tr>
-                        <th>Category</th>
+                        <th>Source</th>
                         <th>Description</th>
                         <th>Amount({{currency}})</th>
                         <th>Date</th>
@@ -45,27 +45,26 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for expense in page_obj %}
+                    {% for income in page_obj %}
                     <tr>
-                        <td>{{expense.category}}</td>
-                        <td>{{expense.description}}</td>
-                        <td>{{expense.amount}}</td>
-                        <td>{{expense.date}}</td>
-                        <td><a href="{% url 'update-expense' expense.id %}" class="btn btn-secondary btn-sm">Update</a></td>
-                        <td><a href="{% url 'delete-expense' expense.id %}" class="btn btn-danger btn-sm">Delete</a></td>
+                        <td>{{income.source}}</td>
+                        <td>{{income.description}}</td>
+                        <td>{{income.amount}}</td>
+                        <td>{{income.date}}</td>
+                        <td><a href="{% url 'update-income' income.id %}" class="btn btn-secondary btn-sm">Update</a></td>
+                        <td><a href="{% url 'delete-income' income.id %}" class="btn btn-danger btn-sm">Delete</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
-        <!--Main Table start -->
-        <!--Search Table start -->
+
         <p class="no-result" style="display: none;">No search result</p>
         <div class="search-table">
             <table class="table table-stripped table-hover">
                 <thead>
                     <tr>
-                        <th>Category</th>
+                        <th>Source</th>
                         <th>Description</th>
                         <th>Amount({{currency}})</th>
                         <th>Date</th>
@@ -78,8 +77,7 @@
                 </tbody>
             </table>
         </div>
-        <!--Search Table start -->
-        <!-- pagination start -->
+
         <div class="pagination-container">
             <div>
                 Showing page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
@@ -96,10 +94,11 @@
                 {% endif %}
             </ul>
         </div>
-        <!-- pagination end -->
+
         {% endif %}
     </div>
+    
 </div>
 
-<script src="{% static 'js/searchExpenses.js' %}"></script>
+<script src="{% static 'js/searchIncome.js' %}"></script>
 {% endblock %}
