Admin panel modification

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,16 +1,10 @@
-{% extends 'admin/base.html' %}
+{% extends 'admin/login.html' %}
 {% load static %}
 
 {% block branding %}
 <h1 id="head">
     <img src="{% static 'images/logo.jpg' %}"  alt="">  <!-- width="150" height="45" -->
-    IncomeExpense
+    Admin Login
 </h1>
-
-{% endblock %}
-
-{% block extrastyle %}
-
-<link rel="stylesheet" href="{% static 'css/adminstyle.css' %}">
 
 {% endblock %}
