--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
   {% include 'header.html' %}
 <body>
@@ -13,7 +14,7 @@
       </main>
     </div>
   </div>
-    
+  
 </body>
 
 </html>
