--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,9 @@
     <link href="{% static 'css/main.css' %}" rel="stylesheet" >
     <!-- Custom styles for this template -->
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+    <!-- {% include 'scripts.html' %} -->
+    
     <!-- Favicons
 <link rel="apple-touch-icon" href="/docs/4.5/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
