--- a/templates/expenses/dashboard.html
+++ b/templates/expenses/dashboard.html
@@ -23,7 +23,11 @@
         {% if expenses.count %}
         <!-- search bar start-->
         <div class="row">
-            <div class="col-md-8"></div>
+            <div class="col-md-8">
+                <a href="{% url 'export-csv' %}" class="btn btn-secondary">Export CSV</a>
+                <a href="{% url 'export-excel' %}" class="btn btn-primary">Export Excel</a>
+                <a href="{% url 'export-pdf' %}" class="btn btn-info">Export Pdf</a>
+            </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <input type="text" class="form-control" id="searchField" placeholder="Search by anything you want" >
